--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,18 @@ body,
   height: 100%;
   margin: 0;
 }
+
+.rti--container {
+  display: inline-flex !important;
+  width: 500px;
+  --rti-bg: #fff !important;
+  --rti-border: lightgray !important;
+  --rti-main: gray !important;
+  --rti-radius: 0.375rem !important;
+  --rti-s: 0.5rem !important; /* spacing */
+  --rti-tag: #edf2f7 !important;
+  --rti-tag-remove: #e53e3e !important;
+}
+.rit--input {
+  flex: 1 !important;
+}
