--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ body,
 #root {
   height: 100%;
   margin: 0;
+  background-color: #f1f1f2;
 }
 
 .rti--container {
@@ -33,7 +34,12 @@ body,
   flex: 1 !important;
 }
 
-h1,h2,h3,h4,h5,h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0;
 }
 
