--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap');
 html {
   box-sizing: border-box;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 14px;
 }
 
 *,
 *:before,
 *:after {
   box-sizing: inherit;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-size: 14px;
 }
 
 html,
